<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.RegisterActivity"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height">

                <ImageView
                    android:id="@+id/backBnt"
                    android:layout_width="@dimen/image_buton_size"
                    android:layout_height="@dimen/image_buton_size"
                    android:src="@drawable/ic_back_gray"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="16dp"/>

                <TextView
                    android:id="@+id/loginTv"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Register"
                    style="@style/TextAppearance.AppCompat.Title"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_thickness"
                    android:background="@color/gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:hint="@string/login"
                app:startIconDrawable="@drawable/ic_person_gray"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/loginEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:hint="Email"
                app:startIconDrawable="@drawable/ic_mail_white"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/mailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/ic_phone_white"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/phoneEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:hint="@string/name"
                app:startIconDrawable="@drawable/ic_person_gray"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surNameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:hint="@string/surname"
                app:startIconDrawable="@drawable/ic_person_gray"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/surNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_lock_white"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rePasswordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                android:hint="@string/re_password"
                app:startIconDrawable="@drawable/ic_lock_white"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/rePasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/loginBnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:layout_marginTop="10dp"
                android:text="@string/are_you_have_account_log_in"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerBnt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_heigh"
                android:layout_marginTop="40dp"
                app:cornerRadius="8dp"
                android:text="@string/register"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>